# python-back

./: .gitignore  README.md  db.py  db_models.py  main.py  pyproject.toml  vercel.json
alembic/: env.py
alembic/versions/: 0dd06c4a884c_add_user_score.py  2a203a2c29c6_update_score_table.py  7ccb0d548710_create_score_table.py  af97733672a9_create_user_table.py  c3692411a27e_initial_migration.py  cd989ff1cfdb_create_users_table.py
api/: index.py
routes/: user.py
src/: auth.py  db.py  db_models.py  main.py  schemas.py
src/app/: database.py  dependencies.py  main.py  schemas.py
src/app/middleware/: auth_middleware.py
src/app/models/: __init__.py  base.py  scores.py  user.py
src/app/routes/: auth.py  score.py  user.py
src/app/services/: auth_service.py  score_service.py  user_service.py
src/app/utils/: custom_exceptions.py
src/routes/: auth.py  user.py
