[project]
name = "python-back"
version = "0.1.0"
description = ""
authors = [
    {name = "jjmr",email = "josejulian.mtzr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.120.1,<0.121.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
]

[tool.pyright]
typeCheckingMode = "standard"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
